--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,11 +4,12 @@ enableCORS = false
 enableXsrfProtection = false
 port = 7860
 maxUploadSize = 200
+maxMessageSize = 200
+enableWebsocketCompression = false
 
 [browser]
 gatherUsageStats = false
 serverAddress = "0.0.0.0"
-serverPort = 7860
 
 [theme]
 primaryColor = "#0066cc"
@@ -16,13 +17,10 @@ backgroundColor = "#ffffff"
 secondaryBackgroundColor = "#f0f2f6"
 textColor = "#262730"
 
-# ✅ Critical for file uploads in HF Spaces
 [runner]
 magicEnabled = false
 fastReruns = true
 
-# ✅ Increase upload size (in MB)
-[server]
-maxUploadSize = 200
-maxMessageSize = 200
-enableWebsocketCompression = true
+[client]
+showErrorDetails = true
+toolbarMode = "minimal"
